Add functionality to toggle active manager survey and list them at surveys#index. with previews

--- a/app/assets/stylesheets/manager_surveys.scss
+++ b/app/assets/stylesheets/manager_surveys.scss
@@ -13,6 +13,29 @@
   color: white;
 }
 
+.toggle-wrapper {
+  vertical-align: middle;
+  align-self:baseline;
+}
+
+.survey-thumbnail {
+  .thumbnail-body {
+    display: none
+  }
+}
+
+.survey-thumbnail:hover {
+  .thumbnail-body {
+    display: block;
+    overflow: scroll;
+    height: 400px;
+  }
+}
+
+.matrix-headings-thumbnail {
+  font-size: .8rem;
+}
+
 .mc-container {
   .radio {
     padding-left: 7%;
