--- a/app/views/employee_entries/new.html.erb
+++ b/app/views/employee_entries/new.html.erb
@@ -5,6 +5,8 @@
     <%= form_tag employee_employee_entries_path(@employee, @entry), method: :post %>
       <input type="hidden" name="target_person_id" value = <%= @employee.manager.id %>>
 
+      <% if @survey %>
+
       <% @survey.questions.each_with_index do |question, index| %>
         <% q_num = index + 1 %>
         <% if question.mc? %>
@@ -129,4 +131,11 @@
       <% end %>
     <%= submit_tag "Submit Entry", class: "btn btn-primary"%>
   </div>
+
+  <% else %>
+
+  <h5>  There are no active surveys right now... Please contact the
+    researcher or try again later. </h5>
+
+    <% end %>
 </div>
