add modal styling

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -28,4 +28,5 @@
  @import "layout";
  @import "studies";
  @import "manager_surveys";
- @import "bootstrap-toggle.min"
+ @import "bootstrap-toggle.min";
+ @import "links";
