--- a/app/views/links/_manager.html.erb
+++ b/app/views/links/_manager.html.erb
@@ -1,19 +1,24 @@
 <div class="modal-header">
-   <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-   <h3 id="myModalLabel">Manager Sign Up Link</h3>
+   <!-- <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button> -->
+   <legend id="myModalLabel">Manager Sign Up Link</legend>
  </div>
  <div class="modal-body">
-   Send this sign up link to the managers you want to participate in the study.
+   <div class="well">
 
-    <div class="form-group">
-      <input type="text" class="form-control" id="link-display" >
-    </div>
-    <button class="btn btn-default" type="submit" id="copy">Copy to Clipboard</button>
+     <p>
+       Send this sign up link to the managers you want to participate in the study.
+     </p>
+
+     <div class="form-group">
+       <input type="text" class="form-control" id="link-display" >
+     </div>
+     <button class="btn btn-primary" type="submit" id="copy">Copy to Clipboard</button>
 
 
-  <span style="display:none;"><%= link_to new_manager_url(company: @study.company, id: @study.id)%></span>
+     <span style="display:none;"><%= link_to new_manager_url(company: @study.company, id: @study.id)%></span>
 
- </div>
+   </div>
+  </div>
  <div class="modal-footer">
    <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
  </div>
