--- a/app/views/manager_entries/new.html.erb
+++ b/app/views/manager_entries/new.html.erb
@@ -1,6 +1,6 @@
 
 <div class="entries-complete-alert alert alert-success" style="display: none">
-  All Entries Submitted! Redirecting to Home Page...
+  All Entries Submitted! Thanks!
 </div>
 
 
