add more redirect changes

--- a/app/views/employee_entries/new.html.erb
+++ b/app/views/employee_entries/new.html.erb
@@ -1,4 +1,6 @@
 
+
+
 <div class="row">
   <div class="col-sm-8 col-sm-offset-2">
     <% if @survey %>
@@ -142,3 +144,14 @@
 
 
 </div>
+
+<script>
+
+  $('form').on('submit', function(){
+
+    console.log("form submit")
+    $(this).hide()
+
+  })
+
+</script>
