--- a/app/views/manager_entries/new.html.erb
+++ b/app/views/manager_entries/new.html.erb
@@ -185,9 +185,9 @@
   var submitCount = 0
 
   $('form').on('submit', function(){
-    console.log("form disabled")
+    // console.log("form disabled")
     submitCount += 1
-    console.log(submitCount)
+    // console.log(submitCount)
     // console.log($(this).parents('.tab-content'))
     $(this).hide()
     $(this).parent('.tab-pane').find('.alert-success').show()
@@ -196,7 +196,7 @@
       $('.submit-entry-view').hide()
       $('.entries-complete-alert').show()
 
-      setTimeout(function(){location.href = '/'}, 2500)
+      setTimeout(function(){location.href = '/home'}, 2500)
     }
 
   })
