--- a/app/views/managers/show.html.erb
+++ b/app/views/managers/show.html.erb
@@ -16,6 +16,7 @@
 
 
   <div class="col-xs-10">
+
     <div class="tab-content">
 
       <% @employees.each_with_index do |employee, index| %>
@@ -26,7 +27,7 @@
           <ul class="nav nav-tabs">
             <% @surveys.each_with_index do |survey, index| %>
             <li class= "<%=  index == 0 ? 'active' : ''  %>">
-              <a href= '#s<%= survey.id %>' data-toggle="tab">
+              <a href= '#s<%= survey.id %>-e<%= employee.id %>' data-toggle="tab">
                 <%= survey.form_name %>
               </a>
             </li>
@@ -35,15 +36,13 @@
           </ul>
 
           <div class="tab-content">
-          <% @surveys.each_with_index do |survey, index| %> <!-- survey content -->
+            <% @surveys.each_with_index do |survey, index| %> <!-- survey content -->
+              <div id= 's<%= survey.id %>-e<%= employee.id %>' class="tab-pane fade <%=  index == 0 ? 'in active' : ''  %> ">
+                SURVEY <%= survey.form_name %>
+                <%= employee.full_name %>
 
-            <div id= 's<%= survey.id %>' class="tab-pane fade <%=  index == 0 ? 'in active' : ''  %> ">
-              SURVEY <%= survey.form_name %>
-              <%= employee.full_name %>
-
-
-            </div> <!-- end survey content-->
-          <% end %>
+              </div> <!-- end survey content-->
+            <% end %>
           </div>
 
 
