--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -12,6 +12,12 @@
   position: fixed;
   right: 0;
 }
+.sidebar-wrapper-left {
+
+  height: 100vh;
+  position: fixed;
+  left: 0;
+}
 
 .navbar {
   margin-bottom: 0;
