--- a/app/views/employees/show.html.erb
+++ b/app/views/employees/show.html.erb
@@ -1,4 +1,121 @@
-<h1>Employee Show</h1>
+<div class="row">
+  <div class="col-xs-10 col-xs-offset-1">
+
+    <ul class="nav nav-tabs">
+      <% @surveys.each_with_index do |survey, index| %>
+      <li class= "<%=  index == 0 ? 'active' : ''  %>">
+        <a href= '#s<%= survey.id %>-e<%= @employee.id %>' data-toggle="tab">
+          <%= survey.form_name %>
+        </a>
+      </li>
+
+      <% end %>
+    </ul>
+
+    <legend>
+      <%= "#{@employee.full_name}'s " %>responses for: <%= @manager.full_name %>
+    </legend>
 
 
-<%= @employee.full_name %>
+    <div class="tab-content">
+      <% @surveys.each_with_index do |survey, surv_index| %> <!-- survey content -->
+      <div id= 's<%= survey.id %>-e<%= @employee.id %>' class="tab-pane fade <%=  surv_index == 0 ? 'in active' : ''  %> ">
+        <% chart_data = {} %>
+        <% question_names = [] %>
+        <% @entries.where(target_person_id: @manager.id, employee_survey_id: survey.id).each_with_index do |entry, index| %>
+        <% entry.content['data'].each do |q_num, data_object| %>
+        <% if chart_data.key?(q_num) == false %>
+        <% chart_data[q_num] = [] %>
+        <% question_names.push(data_object['question'])%>
+        <% end %>
+
+        <% series_object = {} %>
+        <% series_object['name'] = "Entry #{index +1}" %>
+        <% series_data = {} %>
+
+        <% data_object['response'].each do |opt_num, response_object| %>
+        <% series_data[response_object['content']] = response_object['value']  %>
+
+        <% end %>
+
+        <% series_object['data'] = series_data %>
+        <%# entry_data_hash = {"entry#{index + 1}" => series_object} %>
+        <% chart_data[q_num].push(series_object) %>
+
+        <% end %> <!-- entry.content['data'].each do -->
+
+
+        <% end %> <!-- @entrie.each do -->
+
+        <% chart_data.each do |q_num, series_array| %>
+        <div class="panel panel-primary">
+          <div class="panel-heading">
+            <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
+            <h3 class="panel-title"><%= q_num %></h3>
+          </div>
+
+          <div class="panel panel-body panel-collapse-wrapper">
+            <div id="container" style="width: 100%;">
+
+              <% max = 0 %>
+              <% series_array.each do |series_content| %>
+              <% series_content['data'].each do |content, value| %>
+              <% max = (value.to_i) if value.to_i > max %>
+              <% end %>
+              <% end %>
+              <%= bar_chart series_array, width: '100%', max: max,
+              library: {
+                yAxis: {
+                  labels: {
+                    enabled: true,
+                  },
+
+                  allowDecimals: false
+                }
+              }%>
+            </div>
+          </div>
+        </div>
+
+
+        <% end %>
+
+
+      </div> <!-- end survey content-->
+      <% end %>
+
+
+    </div>
+  </div>
+</div>
+
+
+<script>
+$('a[data-toggle="tab"]').on('shown.bs.tab', function (e) {
+  console.log("tabddd")
+  $('div[data-highcharts-chart]').each(function(){
+    $(this).highcharts().reflow()
+  })
+})
+
+$(document).on('click', '.panel-heading span.clickable', function(e){
+  var $this = $(this);
+if(!$this.hasClass('panel-collapsed')) {
+  $this.parents('.panel').find('.panel-collapse-wrapper').slideUp();
+  // $('.employee-panel').height(0)
+  $this.addClass('panel-collapsed');
+
+  $this.find('i').removeClass('glyphicon-chevron-up').addClass('glyphicon-chevron-down');
+} else {
+  $this.parents('.panel').find('.panel-collapse-wrapper').slideDown();
+
+  var detailHeight = $('.profile-panel').height()
+  // $('.employee-panel').height(detailHeight)
+  // $('.employee-list').height(detailHeight - 10)
+  $this.removeClass('panel-collapsed');
+  $this.find('i').removeClass('glyphicon-chevron-down').addClass('glyphicon-chevron-up');
+}
+})
+
+
+</script>
